--- a/ccm_app/templates/home.html
+++ b/ccm_app/templates/home.html
@@ -1,8 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% if user.is_authenticated %}
 <div class="container">
+  {% if messages %}
+  <ul>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+{% if user.is_authenticated %}
     <h1> Welcome, {{user.username}} </h1>
     <br><br>
         <table class="table table-striped table-hover text-center">
@@ -21,7 +28,7 @@
           {% if records %}
             {% for record in records %}
           <tr>
-              <td><a href="{%url 'record' record.id %}">{{ record.payment_reference }}</a> </td>
+              <td><a href="{%url 'payment_record' record.id %}">{{ record.payment_reference }}</a> </td>
               <td>{{ record.first_name }} {{ record.last_name }}</td>
               <td>{{ record.contact_method }}</td>
               <td>{{ record.contact_date }}</td>
