--- a/ccm_app/templates/audit_logs.html
+++ b/ccm_app/templates/audit_logs.html
@@ -1,49 +1,24 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<div class="container">
-    <h1>Audit logs</h1>
-    <br>
-    <table class="table table-striped table-hover text-center">
-        <thead class="table-light">
-            <tr>
-                <th scope="col">Payment reference </th>
-                <th scope="col">Name</th>
-                <th scope="col">Contact method</th>
-                <th scope="col">Contact date</th>
-                <th scope="col">Status</th>
-                <th scope="col">Notes</th>
-                {% if user.is_staff %}
-                <th scope="col">Record created by:</th>
-                <th scope="col">Record updated by:</th>
-                {% endif %}
-            </tr>
-          </thead>
-          <tbody>
-              {% if records %}
-                {% for record in records %}
-              <tr>
-                  <td><a href="{%url 'payment_record' record.id %}">{{ record.payment_reference }}</a> </td>
-                  <td>{{ record.first_name }} {{ record.last_name }}</td>
-                  <td>{{ record.contact_method }}</td>
-                  <td>{{ record.contact_date }}</td>
-                  <td>{{ record.contact_status }}</td>
-                  <td>{{ record.notes }}</td>
-                {% if user.is_staff %}
-                    <td> <strong>{{ record.created_by }}</strong> on {{record.created_at}}</td>
-                  {% if record.updated_by %}
-                  <td><strong>{{ record.updated_by}}</strong> on {{record.updated_at}}</td>
-                  {% else %}
-                  <td> - </td>
-                  {% endif %}
-                  {% endif %}
-              </tr>
-                {% endfor %}
-            {% endif %}
-            <tr>
-            </tr>
-          </tbody>
-    </table>
-</div>
+<h2>Audit Logs</h2>
+<table>
+  <thead>
+    <tr>
+      <th>User</th>
+      <th>Action</th>
+      <th>Timestamp</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for log in logs %}
+    <tr>
+      <td>{{ log.user }}</td>
+      <td>{{ log.get_action_display }}</td>
+      <td>{{ log.timestamp }}</td>
+      <td>{{ log.description }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
-```
