--- a/ccm_app/templates/audit_logs.html
+++ b/ccm_app/templates/audit_logs.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Audit Logs</h2>
+  {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+  {% endif %}
 <table>
   <thead>
     <tr>
