--- a/ccm_app/templates/login.html
+++ b/ccm_app/templates/login.html
@@ -3,6 +3,13 @@
 {% block content %}
 <div class="col-md-6 offset-md-3">
     <h1>Login</h1>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
     <br>
     <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
