--- a/ccm_app/templates/audit_logs.html
+++ b/ccm_app/templates/audit_logs.html
@@ -1,31 +1,39 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>Audit Logs</h2>
-  {% if messages %}
-    {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}">
-            {{ message }}
-        </div>
-    {% endfor %}
-  {% endif %}
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Action</th>
-      <th>Timestamp</th>
-      <th>Description</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for log in logs %}
-    <tr>
-      <td>{{ log.user }}</td>
-      <td>{{ log.get_action_display }}</td>
-      <td>{{ log.timestamp }}</td>
-      <td>{{ log.description }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+
+<h2 class="mt-4 mb-3">Audit Logs</h2>
+
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+      {{ message }}
+    </div>
+  {% endfor %}
+{% endif %}
+
+<div class="table-responsive">
+  <table class="table table-striped table-hover text-center align-middle">
+    <thead class="table-light">
+      <tr>
+        <th scope="col">User</th>
+        <th scope="col">Action</th>
+        <th scope="col">Timestamp</th>
+        <th scope="col">Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for log in logs %}
+        <tr>
+          <td>{{ log.user }}</td>
+          <td>{{ log.get_action_display }}</td>
+          <td>{{ log.timestamp }}</td>
+          <td>{{ log.description }}</td>
+        </tr>
+      {% empty %}
+        <tr><td colspan="4">No logs found.</td></tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
 {% endblock %}
