--- a/ccm_app/templates/base.html
+++ b/ccm_app/templates/base.html
@@ -8,18 +8,21 @@
   </head>
   <body>
     {% include 'nav-bar.html' %}
-    <div class="container">
-     <br>
+    
+    <!-- ✅ Wrap everything inside a single Bootstrap container -->
+    <div class="container mt-4">
       {% if messages %}
         {% for message in messages %}
           <div class="alert alert-warning" role="alert">
             {{ message }}
           </div>
         {% endfor %}
+      {% endif %}
+      
+      {% block content %}
+      {% endblock %}
     </div>
-          {% endif %}
-    {% block content %}
-    {% endblock %}
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
