--- a/ccm_app/templates/confirm_delete.html
+++ b/ccm_app/templates/confirm_delete.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h2>Confirm Delete</h2>
+  <h2 class="mt-4 mb-3">Confirm Delete</h2>
+
+  <p><strong>Record:</strong> {{ record.first_name }} {{ record.last_name }} (Payment Ref: {{ record.payment_reference }})</p>
+
   <p>Are you sure you want to delete this record?</p>
-  <form method="post">
+  
+  <form method="post" class="mt-3">
     {% csrf_token %}
-    <button type="submit">Yes, delete</button>
-    <a href="{% url 'home' %}">Cancel</a>
+    <button type="submit" class="btn btn-danger">Yes, delete</button>
+    <a href="{% url 'home' %}" class="btn btn-secondary ms-2">Cancel</a>
   </form>
 {% endblock %}
