--- a/ccm_app/templates/home.html
+++ b/ccm_app/templates/home.html
@@ -2,43 +2,45 @@
 {% load static %}
 
 {% block content %}
-  <h2>Welcome, {{ request.user.username }}!</h2>
-  {% if messages %}
-    {% for message in messages %}
-      <div class="alert alert-{{ message.tags }}">
-        {{ message }}
-      </div>
-    {% endfor %}
-  {% endif %}
+  <h2 class="mt-4 mb-3">Welcome, {{ request.user.username }}!</h2>
+
   <p>Here are all current records:</p>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Payment Ref</th>
-        <th>Name</th>
-        <th>Status</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for record in records %}
+  <div class="table-responsive">
+    <table class="table table-striped table-hover text-center align-middle">
+      <thead class="table-light">
         <tr>
-          <td>{{ record.payment_reference }}</td>
-          <td>{{ record.first_name }} {{ record.last_name }}</td>
-          <td>{{ record.contact_status }}</td>
-          <td>
-            <a href="{% url 'payment_record' record.id %}">View</a> |
-            <a href="{% url 'update_record' record.id %}">Edit</a> |
-            <a href="{% url 'delete_record' record.id %}">Delete</a>
-          </td>
+          <th scope="col">Payment Ref</th>
+          <th scope="col">Name</th>
+          <th scope="col">Status</th>
+          <th scope="col">Actions</th>
         </tr>
-      {% empty %}
-        <tr><td colspan="4">No records found.</td></tr>
-      {% endfor %}
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        {% for record in records %}
+          <tr>
+            <td>{{ record.payment_reference }}</td>
+            <td>{{ record.first_name }} {{ record.last_name }}</td>
+            <td>{{ record.contact_status }}</td>
+            <td>
+              <a href="{% url 'payment_record' record.id %}" class="btn btn-primary btn-sm">View</a>
+              <a href="{% url 'update_record' record.id %}" class="btn btn-warning btn-sm">Edit</a>
+              {% if request.user.is_staff %}
+                <a href="{% url 'delete_record' record.id %}" class="btn btn-danger btn-sm">Delete</a>
+              {% endif %}
+            </td>
+          </tr>
+        {% empty %}
+          <tr>
+            <td colspan="4">No records found.</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 
-  <p><a href="{% url 'add_record' %}">Add New Record</a></p>
-  <p><a href="{% url 'logout' %}">Logout</a></p>
+  <div class="d-flex justify-content-between mt-4">
+    <a href="{% url 'add_record' %}" class="btn btn-success">Add New Record</a>
+    <a href="{% url 'logout' %}" class="btn btn-secondary">Logout</a>
+  </div>
 {% endblock %}
