fix date format

--- a/ccm_app/templates/home.html
+++ b/ccm_app/templates/home.html
@@ -22,7 +22,7 @@
           <tr>
             <td>{{ record.payment_reference }}</td>
             <td>{{ record.first_name }} {{ record.last_name }}</td>
-            <td>{{ record.contact_date|date:"Y-m-d H:i" }}</td>
+            <td>{{ record.contact_date|date:"F j, Y, g:i a" }}</td>
             <td>{{ record.contact_status }}</td>
             <td>
               <a href="{% url 'payment_record' record.id %}" class="btn btn-primary btn-sm">View</a>
